Upgrade to Apache NetBeans 20